# eigency

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  pre-commit.yml  pypi-wheels.yml  setup.yml  wheel.yml
eigency/: __init__.py  conversions.pxd  conversions.pyx  core.pxd  eigency.h  eigency_cpp.h
recipe/: conda_build_config.yaml
tests/: run_tests.py  setup.py
tests/eigency_tests/: __init__.py  eigency_np2.pyx  eigency_tests.pyx  eigency_tests_cpp.cpp  eigency_tests_cpp.h
